# bangbang-timed

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: basics.rs  constraints.rs
